# silex

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: private_repositories.md
examples/: with_date_col.py
src/silex/: __init__.py  df.py  dummy.py  exception.py
src/silex/fn/: date.py  drop.py  expect.py  filter.py  has.py  join.py
src/silex/testing/: spark.py  string.py
src/silex/utils/: spark.py
src/tests/bdd/: drop_col_if_na.feature  drop_col_if_not_distinct.feature  drop_if_na.feature  dummy.feature  expect.feature  expect_avg_value_between.feature  expect_column.feature  expect_columns.feature  expect_distinct_values_equal_set.feature  expect_distinct_values_in_set.feature  expect_max_value_between.feature  expect_min_value_between.feature  expect_unique_id.feature  filter_on_range.feature  filter_range.feature  has_column.feature  has_columns.feature  has_distinct_values_equals_set.feature  has_distinct_values_in_set.feature  has_unique_id.feature  join_closest.feature  table.feature  with_date_column.feature
src/tests/bdd/steps/: dummy.py  operation_on_df.py  output.py  parameters.py  spark.py  table.py
